--- a/styles/index.css
+++ b/styles/index.css
@@ -88,6 +88,38 @@ body {
     padding: 10px;
 }
 
+#cards {
+    display: flex;
+    width: 100%;
+    gap: 30px;
+}
+
+.card-projeto {
+    width: 150px;
+    height: 200px;
+    background-color: var(--azul);
+    border-radius: 20px;
+    margin-top: 10px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.440);
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.card-projeto > p {
+    font-size: .8em;
+}
+
+.imagem {
+    display: block;
+    height: 80px;
+    width: 100%;
+    margin-bottom: 10px;
+    object-fit: cover;
+}
+
 h3 {
     margin: 0px;
 }
