--- a/styles/vars.css
+++ b/styles/vars.css
@@ -3,6 +3,7 @@
     --color-branco: #F2F2F2;
     --color-azul: #7291FF;
     --color-cinza: #D9D9D9;
+    --color-destaque: #1231a3;
 
-    --font: inter, sans-serif;
+    --font: Inter, sans-serif;
 }
